--- a/editor-components/hero-section/hero-section12/hero-section12.module.scss
+++ b/editor-components/hero-section/hero-section12/hero-section12.module.scss
@@ -50,16 +50,18 @@
         }
       }
 
-      > div > div > div {
+      .slick-list,
+      .slick-track,
+      .slick-slide {
         height: 650px;
         border: none;
+      }
 
-        > div {
+      .slick-track {
+        height: 100%;
+
+        .slick-slide {
           height: 100%;
-
-          > div {
-            height: 100%;
-          }
         }
       }
     }
@@ -117,6 +119,7 @@
             overflow: hidden;
             display: -webkit-box;
             -webkit-line-clamp: 2;
+            line-clamp: 2;
             -webkit-box-orient: vertical;
           }
         }
@@ -180,6 +183,7 @@
             overflow: hidden;
             display: -webkit-box;
             -webkit-line-clamp: 2;
+            line-clamp: 2;
             -webkit-box-orient: vertical;
             text-overflow: ellipsis;
             padding-right: calc(var(--composer-gap-md) * 1.5);
@@ -209,16 +213,6 @@
         padding: 0;
         margin: 0;
         box-sizing: border-box;
-        .left-slider {
-          .slider-item {
-            .image-overlay-container {
-              .slider-item-image {
-              }
-              .image-overlay {
-              }
-            }
-          }
-        }
         .left-slider-button,
         .right-slider-button {
           .slider-item {
@@ -233,16 +227,7 @@
             }
           }
         }
-        .right-slider {
-          .slider-item {
-            .image-overlay-container {
-              .slider-item-image {
-              }
-              .image-overlay {
-              }
-            }
-          }
-        }
+       
         .left-slider,
         .right-slider {
           width: 100%;
@@ -317,16 +302,18 @@
             }
           }
 
-          > div > div > div {
+          .slick-list,
+          .slick-track,
+          .slick-slide {
             height: 100vh;
             border: none;
+          }
 
-            > div {
+          .slick-track {
+            height: 100%;
+
+            .slick-slide {
               height: 100%;
-
-              > div {
-                height: 100%;
-              }
             }
           }
         }
@@ -344,27 +331,7 @@
         padding: 0;
         margin: 0;
         box-sizing: border-box;
-        .left-slider {
-          .slider-item {
-            .image-overlay-container {
-              .slider-item-image {
-              }
-              .image-overlay {
-              }
-            }
-          }
-        }
 
-        .right-slider {
-          .slider-item {
-            .image-overlay-container {
-              .slider-item-image {
-              }
-              .image-overlay {
-              }
-            }
-          }
-        }
 
         .left-slider,
         .right-slider {
@@ -435,16 +402,18 @@
             }
           }
 
-          > div > div > div {
+          .slick-list,
+          .slick-track,
+          .slick-slide {
             height: 100vh;
             border: none;
+          }
 
-            > div {
+          .slick-track {
+            height: 100%;
+
+            .slick-slide {
               height: 100%;
-
-              > div {
-                height: 100%;
-              }
             }
           }
         }
